# python-packaging

./: .gitignore  BINARY_BUILD_GUIDE.md  CLI_INSTALLATION_PATTERNS.md  INSTALLATION_GUIDE.md  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml  setup.py
sampleproject/: __init__.py  cli.py
